--- a/C++Prime/C++Prime.vcxproj.filters
+++ b/C++Prime/C++Prime.vcxproj.filters
@@ -249,6 +249,9 @@
     <ClCompile Include="10-1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="10-2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="6-5.h">
