--- a/C++Prime/C++Prime.vcxproj.filters
+++ b/C++Prime/C++Prime.vcxproj.filters
@@ -249,6 +249,9 @@
     <ClCompile Include="10-1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="10-2-1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="10-2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -285,6 +288,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="10-1.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="10-2.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
