--- a/C++Prime/C++Prime.vcxproj.filters
+++ b/C++Prime/C++Prime.vcxproj.filters
@@ -255,15 +255,57 @@
     <ClCompile Include="10-2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="10-3.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="10-3-1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="10-4.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="10-4-1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="10-5.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="10-5-1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="10-6-1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="10-6.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="10-7.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="10-7-1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="10-8.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="10-8-1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="remind.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="11-1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="11-1-1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="6-5.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="6-7.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="fdsjlfdas.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="7-1.h">
@@ -291,6 +333,36 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="10-2.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="10-3.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="10-4.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="10-5.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="10-6.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="10-7.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="10-8.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="remind.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="11-1.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="custom.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="main.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
